fix some alignments issues

--- a/themes/bansuri/sass/custom/_page.scss
+++ b/themes/bansuri/sass/custom/_page.scss
@@ -25,6 +25,13 @@
 	}
 	.bansuri-cds {
 		background:url("../images/bg-edges.png");
+		.description {
+			padding-bottom: 10px;
+			padding-top: 10px;
+		}
+		.view-content {
+			padding-bottom: 20px;
+		}
 		.view {
     		padding-left: 10px;
     		padding-right: 10px;
@@ -316,13 +323,13 @@
 		padding-top: 10px;
 		.views-field.views-field-body {
 			display: inline-block;
-			width: 60%;
+			width: 55%;
 			vertical-align: top;
 			padding-right: 20px;
 		}
 		.views-field-field-testominal-image {
 		    display: inline-block;
-		    width: 40%;
+		    width: 45%;
 		    img {
 		    	float: right;
 		    }
